--- a/basic.html
+++ b/basic.html
@@ -33,7 +33,7 @@
         #img1{
             position: absolute;
              left:510px;
-            top: 180px;
+            top: 200px;
         }
         
     </style>
@@ -52,7 +52,7 @@
     <p id="demo"></p>
     </div>
     <div id="img1">
-        <img src="cute.avif" height="100px" width="100px">
+        <img src="cute.jpg" height="80px" width="80px">
     </div>
    
 </body>
